--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -33,8 +33,8 @@
     align-self: stretch flex-end;
   }
   
-  .shopper:hover {
-    content: url("../images/svg/shopper_hover.svg");
+  .shopper:hover svg {
+    fill: #ff922c; 
   }
   
   .nav__shopper__badge {
@@ -50,6 +50,6 @@
   
   nav {
     background-color: transparent;
-    position: fixed;
+    /* position: fixed; */
     z-index: 10;
   }
